updated colors, boldness, made more visible, fixed footer

--- a/style.css
+++ b/style.css
@@ -20,15 +20,42 @@ p {
 
 }
 
-h2 h3 h4 h6 {
- font-family: sans-serif; cursive;
+h2 {
+ font-family: Snell Roundhand, cursive;
+ font-style: normal;
  text-align: center;
- color:
+ font-weight: bold;
+ color: rgba(75, 4, 75, 1);
+ font-size: 50px;
+}
+
+h3 {
+    font-family: Snell Roundhand, cursive;
+    font-style: normal;
+    text-align: center;
+    font-weight: bold;
+    color: rgba(75, 4, 75, 1);
+    font-size: 50px;
+}
+
+h4 {
+    font-family: Snell Roundhand, cursive;
+    font-style: normal;
+    text-align: center;
+    font-weight: bold;
+    color: rgba(75, 4, 75, 1);
+    font-size: 50px;
 }
 
 img {
-    height: 25px;
-    width: 25px;
+    contain:
+    position: absolute;
+    top: 0; bottom:0; left: 0; right:0;
+    margin: auto;
+    /*height: 55px;
+    width: 55px;
+    display: block;
+    margin: 5px 5px;*/
 }
 
 .contact {
@@ -41,12 +68,12 @@ img {
 
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: -2;
     width: 100%;
-    height: 60px;
-    text-align: right;
-    background-color: Orange;
+    height: 30px;
+    text-align: center;
+    background-color: rgb(101, 41, 199);
 }
 nav {
-    display: inline-block;
+    text-align: center;
 }
